created cse dept page

--- a/asset_management_frontend/src/App.css
+++ b/asset_management_frontend/src/App.css
@@ -3,7 +3,7 @@ html{
     font-size:50%;
     box-sizing:border-box;
     font-family: 'Arimo', sans-serif !important;
-    background-color: #0D051B;
+    background-color: #e0dbe7;
 }
 
 body{
