view assets page done

--- a/asset_management_frontend/src/css/adminHomePage.css
+++ b/asset_management_frontend/src/css/adminHomePage.css
@@ -21,6 +21,8 @@
 }
 .action-selector{
     display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 0rem 1rem;
     font-size: 2rem;
     font-weight: 500;
