--- a/asset_management_frontend/src/components/cards/cards.css
+++ b/asset_management_frontend/src/components/cards/cards.css
@@ -24,7 +24,7 @@
 
 .cards-title{
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: flex-start;
     width:100%;
     padding:1rem 0.8rem;
