--- a/asset_management_frontend/src/css/cseDept.css
+++ b/asset_management_frontend/src/css/cseDept.css
@@ -1,6 +1,6 @@
-* {
+/* * {
     font-size: 105%;
-}
+} */
 
 table {
     width: 100%;
@@ -103,8 +103,8 @@ h2 {
 }
 
 label {
-    display: block;
-    margin-top: 10px;
+    /* display: block; */
+    /* margin-top: 10px; */
 }
 
 .main-div input {
