--- a/asset_management_frontend/src/css/addAsset.css
+++ b/asset_management_frontend/src/css/addAsset.css
@@ -1,7 +1,7 @@
-.add-asset-main-container{
-    /* background-color: #fff; */
+/* .add-asset-main-container{
+    background-color: #fff;
 
-}
+} */
 
 .add-asset-radio-selector{
     width: 100%;
