create asset type of

--- a/asset_management_frontend/src/css/createAsset.css
+++ b/asset_management_frontend/src/css/createAsset.css
@@ -1,106 +1,85 @@
-/* Resetting some default styles for better consistency */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+.create-asset-type-main{
+  height: 100%;
+  width: 100%;
+  background-color: #263043;
+}
+.create-sub{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  /* justify-content: center;
+  align-items: center; */
+}
+.create-sub-main-container{
+  width: 100%;
+  height: 100vh;
+  padding-left: 30rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-left: 0.5rem solid #ffff;
+}
+.ceate-sub-container{
+  width: 100%;
+  height: 100%;
+  padding-top: 15rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.heading{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.asset-type{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 10rem;
+}
+.asset-type input{
+  height: 4rem;
+  width: 25rem;
+  text-align: center;
+}
+.asset-type button{
+  height: 4rem;
+  width: 16rem;
+}
+.specs-input{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 90%;
+  padding: 2rem ;
+  height: 5rem;
   
-  .create-asset-type-main {
-    height: 100vh;
-    width: 100%;
-    background-color: #263043;
-    display: flex;
-  }
-  
-  .create-sub {
-    height: 100%;
-    width: 100%;
-    display: flex;
-  }
-  
-  .create-sub-main-container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-left: 0.5rem solid #ffff;
-  }
-  
-  .create-sub-container {
-    width: 100%;
-    height: 50%;
-    padding-top: 20rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .asset-type-main {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .asset-type-main input {
-    height: 2rem;
-    margin-bottom: 1rem;
-  }
-  
-  .specs-input {
-    display: flex;
-    flex-direction: column;
-    width: 30%;
-    padding: 2rem;
-    height: 5rem;
-  }
-  
-  .specs-input-sub {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 1rem;
-  }
-  
-  .specs-input-sub input {
-    height: 2rem;
-  }
-  
-  .asset-specs-main {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  /* Styling for the heading */
-  .heading h1 {
-    font-size: 2rem;
-    color: #fff;
-    margin-bottom: 1rem;
-  }
-  
-  /* Styling for the buttons */
-  button {
-    margin-top: 1rem;
-    padding: 0.5rem 1rem;
-    cursor: pointer;
-    border: none;
-    background-color: #4910e6;
-    color: #fff;
-    border-radius: 4px;
-    transition: background-color 0.3s ease;
-  }
-  
-  button:disabled {
-    background-color: #7f8c8d;
-    cursor: not-allowed;
-  }
-  
- 
+}
+
+.specs-input-sub{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+
+}
+
+.specs-input-sub input{
+  height: 4rem;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+}
+
+.asset-specs-main{
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
