--- a/asset_management_frontend/src/css/createAsset.css
+++ b/asset_management_frontend/src/css/createAsset.css
@@ -8,7 +8,7 @@
   width: 100%;
   display: flex;
   /* justify-content: center;
-  align-items: center; */
+  align-items: center;rugfnheirg */
 }
 .create-sub-main-container{
   width: 100%;
