--- a/asset_management_frontend/src/css/addAsset.css
+++ b/asset_management_frontend/src/css/addAsset.css
@@ -3,22 +3,26 @@
     background-color: #263043;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    height: 100vh;
+    /* justify-content: center; */
+    /* align-items: center; */
 }
 .add-asset-header{
-    display: flex;
+    width: 100%;
+    height: 15vh;
+    /* display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    width: 100%;
+    align-items: center; */
 }
 .add-asset-sub-container{
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+
 .add-asset-radio-selector{
     width: 100%;
     display: flex;
@@ -33,7 +37,7 @@
     align-items: center;
 }
 .asset-type-selector{
-    width: 50%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -58,6 +62,7 @@
 /* Styling for the 'tag' section of AddAsset component */
 .add-asset-tag-main {
     margin-top: 2rem;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -65,7 +70,7 @@
 }
 
 .add-asset-tag-sub {
-    width: 60%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -128,7 +133,7 @@
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    border: 1px solid #030d5c;
+    border: 1px solid #2f45ec;
     margin-bottom: 1rem;
     border-radius: 5px;
 }
@@ -198,6 +203,7 @@ button:hover {
 /* Styling for 'notag' section */
 .notag-main-container {
     margin-top: 4rem;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
