--- a/asset_management_frontend/src/css/cseDept.css
+++ b/asset_management_frontend/src/css/cseDept.css
@@ -12,15 +12,24 @@ thead th {
     background-color: #333;
     color: white;
     text-align: left;
-    padding: 10px;
+    padding-left: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-right: 20px;
+    
 }
 
 tbody tr:nth-child(even) {
     background-color: #f2f2f2;
+    
 }
 
 tbody td {
-    padding: 10px;
+    padding-left: 25px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    
+    font-size: 1.7rem;
 }
 
 .edit-btn {
