--- a/asset_management_frontend/src/App.css
+++ b/asset_management_frontend/src/App.css
@@ -5,7 +5,7 @@
 html{
     font-size:50%;
     box-sizing:border-box;
-    /* font-family: 'Arimo', sans-serif !important; */
+    /* font-family: 'Arimo0', sans-serif !important; */
     font-family: 'Montserrat', sans-serif;
     background-color: #e0dbe7;
 }
