--- a/asset_management_frontend/src/components/sidebar.css
+++ b/asset_management_frontend/src/components/sidebar.css
@@ -51,3 +51,13 @@
     z-index: 12 !important;
   }
   
+  .close{
+    display: none;
+  }
+
+  .open{
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    list-style-type: none;
+  }
